# Jvk-s-Studio-Mobile

./: README.md  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: build.yml
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  Delay.cpp  Delay.h  Envelope.h  Filter.h  JvkAudioBridge.cpp  Mixer.h  Oscillator.h  Reverb.cpp  Reverb.h  SynthVoice.cpp  SynthVoice.h
app/src/main/java/com/jvk/studio/: MainActivity.kt  MainViewModel.kt
app/src/main/java/com/jvk/studio/audio/: AudioBridge.kt
app/src/main/java/com/jvk/studio/midi/: MidiManager.kt
app/src/main/java/com/jvk/studio/ui/components/: AddChannelButton.kt  AddChannelSheet.kt  Header.kt  PianoKeyboard.kt
app/src/main/java/com/jvk/studio/ui/screens/: MainScreen.kt
app/src/main/java/com/jvk/studio/ui/theme/: Theme.kt  Typography.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
